# Industrial-Knowledge-Brain-Factory-AI-Brain-

./: .env.example  docker-compose.dev.yml
ai/knowledge_graph/: __init__.py
ai/rag/: __init__.py
backend/services/agent_service/: __init__.py  main.py  pyproject.toml
backend/services/agent_service/src/api/rest/: __init__.py  router.py
backend/services/agent_service/src/application/: orchestrator.py
backend/services/agent_service/src/application/workflows/: root_cause_workflow.py
backend/services/agent_service/src/domain/models/: agent_result.py
backend/services/agent_service/src/infrastructure/agents/: base_agent.py  maintenance_agent.py  monitoring_agent.py  root_cause_agent.py
backend/services/agent_service/src/infrastructure/llm_clients/: anthropic_client.py
backend/services/agent_service/src/infrastructure/memory/: episodic_memory.py  semantic_memory.py
backend/services/agent_service/src/infrastructure/tools/: base_tool.py  graph_tool.py  rag_tool.py  telemetry_tool.py
backend/services/api_gateway/: main.py  pyproject.toml
backend/services/api_gateway/src/: config.py
backend/services/ingestion_service/: __init__.py  main.py  pyproject.toml
backend/services/ingestion_service/src/application/handlers/: __init__.py  pdf_handler.py
backend/services/ingestion_service/src/domain/: __init__.py
backend/services/ingestion_service/src/domain/models/: __init__.py  ingestion_job.py
backend/services/ingestion_service/src/infrastructure/connectors/: mqtt_connector.py  opcua_connector.py
backend/services/ingestion_service/src/infrastructure/parsers/: excel_parser.py  pdf_parser.py
backend/services/ingestion_service/src/infrastructure/storage/: minio_client.py
backend/services/knowledge_graph_service/: __init__.py  main.py  pyproject.toml
backend/services/rag_service/: main.py  pyproject.toml
backend/services/rag_service/src/application/commands/: ingest_document.py
backend/services/rag_service/src/application/queries/: retrieve_context.py
backend/services/rag_service/src/infrastructure/chunkers/: base_chunker.py  parent_child_chunker.py  recursive_chunker.py  semantic_chunker.py  timeseries_chunker.py
backend/services/rag_service/src/infrastructure/embedders/: __init__.py  openai_embedder.py
backend/services/rag_service/src/infrastructure/rerankers/: cross_encoder_reranker.py
backend/services/rag_service/src/infrastructure/retrievers/: hybrid_retriever.py  multi_query_retriever.py  parent_retriever.py
backend/services/rag_service/src/infrastructure/vector_stores/: qdrant_store.py
backend/services/telemetry_service/: __init__.py  main.py  pyproject.toml
backend/services/telemetry_service/src/api/rest/: router.py  schemas.py
backend/services/telemetry_service/src/application/: stream_processor.py
backend/services/telemetry_service/src/domain/models/: __init__.py  anomaly.py  sensor_reading.py
backend/services/telemetry_service/src/infrastructure/cache/: redis_cache.py
backend/services/telemetry_service/src/infrastructure/detectors/: ml_detector.py  rule_detector.py  statistical_detector.py
backend/services/telemetry_service/src/infrastructure/time_series_db/: __init__.py  influxdb_client.py
backend/shared/: __init__.py
backend/shared/base/: __init__.py  aggregate.py  command.py  entity.py  event.py  query.py  repository.py  value_object.py
backend/shared/infrastructure/: __init__.py
backend/shared/utils/: __init__.py  circuit_breaker.py  retry.py
infrastructure/docker/: Dockerfile.service
monitoring/prometheus/: prometheus.yml
scripts/: health_check.sh
tests/integration/rag/: test_retrieval_stack.py
tests/unit/agent/: test_react_loop.py
tests/unit/knowledge_graph/: test_extractors.py  test_queries.py
tests/unit/rag/: test_chunkers.py
tests/unit/shared/: test_aggregate.py  test_circuit_breaker.py  test_entity.py  test_event_bus.py  test_event_store.py  test_postgres.py  test_retry.py
(+22 files in other folders)
