[tool.poetry]
name = "ingestion-service"
version = "0.1.0"
description = "IKB Ingestion Service — document and data ingestion pipeline"
authors = ["Factory AI Team <team@factory-ai.io>"]
packages = [{ include = "backend", from = "../../.." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
pydantic = "^2.7"
pydantic-settings = "^2.3"
aiokafka = "^0.10"
asyncpg = "^0.29"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
python-multipart = "^0.0.9"
aiofiles = "^23.2"
structlog = "^24.2"
orjson = "^3.10"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-otlp = "^1.24"
opentelemetry-instrumentation-fastapi = "^0.45b0"
pymupdf = "^1.24.4"
pdfplumber = "^0.11.0"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
asyncua = "^1.1.0"
aiomqtt = "^2.1.0"
aiobotocore = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
