[tool.poetry]
name = "telemetry-service"
version = "0.1.0"
description = "IKB Telemetry Service — real-time sensor data processing and anomaly detection"
authors = ["Factory AI Team <team@factory-ai.io>"]
packages = [{ include = "backend", from = "../../.." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
pydantic = "^2.7"
pydantic-settings = "^2.3"
aiokafka = "^0.10"
influxdb-client = { version = "^1.43", extras = ["async"] }
numpy = "^1.26"
structlog = "^24.2"
orjson = "^3.10"
opentelemetry-api = "^1.24"
opentelemetry-sdk = "^1.24"
opentelemetry-exporter-otlp = "^1.24"
opentelemetry-instrumentation-fastapi = "^0.45b0"
torch = "^2.2.0"
mlflow = "^2.14"
redis = { version = "^5.0.0", extras = ["hiredis"] }
prometheus-client = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
